[SELC-7072] feat: integrate new api to verify otp code (#378)
